--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: jleveille
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
@@ -77,8 +77,8 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
-googleplus_hidden: false
+googleplus_user: jason@leve.us
+googleplus_hidden: true
 
 # Pinboard
 pinboard_user:
@@ -89,8 +89,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: jasonleveille
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
