--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ disqus_short_name: jasonleveille
 disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-37280745-1
 
 # Facebook Like
 facebook_like: false
