--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://jason.leveille.us
 title: Jason Leveille
-subtitle: 
+subtitle: Web developer, loving life in Southern Maine
 author: Jason Leveille
 simple_search: http://google.com/search
-description:
+description: I'm a web developer living in Southern Maine.  I work for the National Priorities project, primarily using Linux based tools.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -27,7 +27,7 @@ email: i@leve.us
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /blog/:year/:month/:title/
 source: source
 destination: public
 plugins: plugins
